--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "materialize-css": "^1.0.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
